--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/*.py": {
-      "runtime": "@vercel-python/python3.9.13"
+      "runtime": "@vercel/python3.9"
     }
   }
 }
