gitignore updated with deployment data

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ scripts/test.py
 scripts/test2.py
 
 data/
-!data/deployment/**
+!data/deployment/openai-unicodeNames-embeddings.npz
+!data/deployment/emoji_head.npz
+!data/deployment/characters.txt
 
 /.env
 
