--- a/.vercelignore
+++ b/.vercelignore
@@ -11,9 +11,10 @@
 !api/search.py
 
 !data/deployment/
-!data/deployment/openai-unicodeNames-embeddings.npz
-!data/deployment/emoji_head.npz
 !data/deployment/characters.txt
+!data/deployment/openai-unicodeNames-embeddings.npz
+!data/deployment/emoji_head.npz/
+!data/deployment/emoji_head.npz/model_weights.npz
 
 # Ignore Python build artifacts
 *.egg
