the great Jan 2025 model weights naming fiasco pt 2

--- a/.vercelignore
+++ b/.vercelignore
@@ -13,8 +13,7 @@
 !data/deployment/
 !data/deployment/characters.txt
 !data/deployment/openai-unicodeNames-embeddings.npz
-!data/deployment/emoji_head.npz/
-!data/deployment/emoji_head.npz/model_weights.npz
+!data/deployment/model_weights.npz
 
 # Ignore Python build artifacts
 *.egg
